crates/deadline-cli/tests/cli/snapshots/cli__fleet__fleet_get_both_fleet_id_and_queue_id_errors.snap
---
source: crates/deadline-cli/tests/cli/fleet.rs
info:
  program: deadline
  args:
    - fleet
    - get
    - "--fleet-id"
    - fleet-aaa
    - "--queue-id"
    - queue-111
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:63839"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:63839"
    AWS_ENDPOINT_URL_S3: "http://localhost:63839"
    AWS_ENDPOINT_URL_STS: "http://localhost:63839"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpAAeHpK/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpAAeHpK
---
success: false
exit_code: 1
----- stdout -----
Only one of the --fleet-id and --queue-id options may be provided.

----- stderr -----
