crates/deadline-cli/tests/cli/snapshots/cli__fleet__fleet_get_no_fleet_id_no_queue_id_errors.snap
---
source: crates/deadline-cli/tests/cli/fleet.rs
info:
  program: deadline
  args:
    - fleet
    - get
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:63874"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:63874"
    AWS_ENDPOINT_URL_S3: "http://localhost:63874"
    AWS_ENDPOINT_URL_STS: "http://localhost:63874"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpp2hznQ/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpp2hznQ
---
success: false
exit_code: 1
----- stdout -----
Missing '--fleet-id', '--queue-id', or default Queue ID configuration

----- stderr -----
